# emoji-compression

./: .gitignore  Cargo.toml  README.MD  emojis.json
src/: emojis.txt  gpt.rs  main.rs  parser.rs  server.rs
